Add environment variables for jenkins by providing *.sh file to be pushed under /usr/profile.d/